force-app/main/default/objects/Event_Room_Detail__c/Event_Room_Detail__c.object-meta.xml
<CustomObject>
    <label>Event Room Detail</label>
    <nameField>
        <displayFormat>ERD{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Room Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>