force-app/main/default/objects/Event_Room_Detail__c/fields/PickUp__c.field-meta.xml
<CustomField>
    <fullName>PickUp__c</fullName>
    <label>PickUp</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>