force-app/main/default/objects/Event_Room_Detail__c/fields/Room_Block__c.field-meta.xml
<CustomField>
    <fullName>Room_Block__c</fullName>
    <label>Room Block</label>
    <referenceTo>Event_Room__c</referenceTo>
    <relationshipLabel>Event Room Details</relationshipLabel>
    <relationshipName>Event_Room_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>