force-app/main/default/objects/Event_Room_Detail__c/fields/Room_Detail__c.field-meta.xml
<CustomField>
    <fullName>Room_Detail__c</fullName>
    <label>Room Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>